REGRESSION(r89535): Form reset does not repaint a file upload control. https://bugs.webkit.org/show_bug.cgi?id=65008

Patch by Kentaro Hara <haraken@google.com> on 2011-07-22
Reviewed by Kent Tamura.

Source/WebCore:

This patch fixes the code so that the file upload control is repainted
in updateFromElement() if no files are selected.

Tests: fast/forms/file-input-reset.html

* rendering/RenderFileUploadControl.cpp:
(WebCore::RenderFileUploadControl::updateFromElement): Calls repaint() if no files are selected.

LayoutTests:

This patch fixes the code so that the file upload control is repainted
in updateFromElement() if no files are selected. The added test checks
if the label next to the file chooser button becomes "No file chosen"
when we press the reset button.

* fast/forms/file-input-reset-expected.html: Added.
* fast/forms/file-input-reset.html: Added.

Canonical link: https://commits.webkit.org/80760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91566 268f45cc-cd09-0410-ab3c-d52691b4dbfc